crates/concrete_driver/tests/invalid_programs/import1.con
mod Simple {
    import Other.{hello1};

    fn main() -> i64 {
        return 0;
    }
}
